# glue-ar

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  MANIFEST.in  README.md  edenhofer-isosurface-256.html  edenhofer-isosurface.glb  edenhofer-isosurface.html  export-options.html  index.html  leike.html  local_bubble.html  pyproject.toml  requirements.txt  ring_colormap.html  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-workflows.yml  deploy-examples.yml
assets/css/: main.css
docs/: export-options.html  index.html  radwave.html
docs/examples/: 125_isosurface.html  125_isosurface_256_native.html  125_red_test.html  125_voxel_128.glb  125_x2.html  NGC891_isosurface_256.html  edenhofer-voxel-350.html  gum-nebula-both-isosurface.html  gum_nebula.html  gum_nebula_isosurface.html  gum_nebula_monochrome.html  gum_nebula_points.glb  gum_nebula_points.html  gum_nebula_points_cmap.glb  gum_nebula_points_cmap.usdz  gum_nebula_scatter_nodes.html  homology_voids_isosurface_draco.glb  lb_b_gum_vec_draco.html  leike_voxel.html  local_bubble_b_field.html  m83_isosurface.html  m83_isosurface_stretch.glb  m83_voxel.html  m83_voxel_stretch.html  mw3d_draco.html  mw3d_edenhofer_iso_draco.html  ngc3132_isosurface.glb  ngc3132_isosurface.html  ngc3132_voxel_350.glb  ngc3132_voxel_350.html  pertau-v2-draco.glb  pertau-v2-draco.html  pertau.html  pertau_controls_test.html  protodisk-voxel.html  protodisk.html  radwave.html  radwave_first.html  ring_colormap.html  tng-galaxy-anim.html  (+2 more)
examples/: 125_voxel_128.html  125_voxel_128_native.glb  125_voxel_128_native.html  125_x2.html  Jupiter.html  Moon.html  NGC891_voxel_256.html  edenhofer-isosurface-256-nocomp.html  edenhofer-isosurface.glb  edenhofer-isosurface.html  edenhofer-voxel-350.html  gum-nebula-both-isosurface.html  gum_nebula.html  gum_nebula_isosurface.glb  gum_nebula_points_cmap.glb  gum_nebula_points_cmap.html  gum_nebula_voxel.html  homology_voids_isosurface_draco.html  leike.html  leike_voxel.glb  local_bubble_b_field.html  m83_isosurface_stretch.html  m83_voxel.glb  m83_voxel_stretch.html  ngc3132_isosurface_350.glb  ngc3132_isosurface_350.html  pertau.html  pertau_voxel.html  protodisk.glb  protodisk.html  radwave.html  radwave_first.html  ring_colormap.glb
glue_ar/: __init__.py  common.py  compression.py  compression_draco.py  conftest.py  export.py  export_dialog.py  export_dialog.ui  export_scatter.py  export_scatter.ui  export_volume.py  export_volume.ui  exporting_dialog.py  gltf_utils.py  ip_test.py  marching_cubes.py  mesh.py  obj.py  point_clouds.py  qr.py  qr_dialog.py  qr_dialog.ui  registries.py  scatter.py  server.py  shapes.py  tools.py  usd_utils.py  utils.py  volume.py  voxels.py
glue_ar/common/: __init__.py  ar_file_builder.py  export.py  export_dialog_base.py  export_options.py  export_state.py  gltf_animation.py  gltf_builder.py  ifig_exporter.py  marching_cubes.py  points_gltf.py  points_usd.py  qr.py  ranged_callback.py  scatter.py  scatter_export_options.py  scatter_gltf.py  scatter_stl.py  scatter_usd.py  shapes.py  stl_builder.py  usd_builder.py  volume.py  volume_export_options.py  voxels.py
glue_ar/jupyter/: export_dialog.py  export_dialog.vue  export_tool.py  number_field.py  widgets.py
js/: glue-ar-export.js  package.json
(+37 files in other folders)
