[metadata]
name = glue-ar
provides = glue_ar

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
install_requires = 
    gltflib
    glue-core
    glue-qt
    glue-vispy-viewers
    ngrok
    pillow
    pyvista
    segno

[options.package_data]
* = *.png, *.ui

[options.entry_points]
glue.plugins =
    glue_ar=glue_ar:setup
